Bug 1472321 - Make sure sink identity is set on recvonly/inactive transceivers. r=drno, r=mjf, a=lizzard

MozReview-Commit-ID: jZHsDKN5o6