media/webrtc/signaling/src/peerconnection/TransceiverImpl.cpp
@@ -125,7 +125,7 @@ TransceiverImpl::UpdateSinkIdentity(const dom::MediaStreamTrack* aTrack,
                                     nsIPrincipal* aPrincipal,
                                     const PeerIdentity* aSinkIdentity)
 {
-  if (!(mJsepTransceiver->mJsDirection & sdp::kSend)) {
+  if (mJsepTransceiver->IsStopped()) {
     return NS_OK;
   }
 
